@@ -1,3 +1,7 @@
+2009-09-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/winWm.test: [Bug 2799589] grab on deleted window.
+
 2009-09-25  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tkImgPhoto.c (ImgGetPhoto): Correct generation of grayscale
